packagelon com.twittelonr.reloncos.uselonr_twelonelont_graph

import com.twittelonr.finaglelon.thrift.ClielonntId
import com.twittelonr.finaglelon.tracing.Tracelon
import com.twittelonr.finaglelon.tracing.TracelonId
import com.twittelonr.reloncos.deloncidelonr.elonndpointLoadShelonddelonr
import com.twittelonr.reloncos.reloncos_common.thriftscala._
import com.twittelonr.reloncos.uselonr_twelonelont_graph.thriftscala._
import com.twittelonr.util.Duration
import com.twittelonr.util.Futurelon
import com.twittelonr.util.Timelonr
import scala.concurrelonnt.duration.MILLISelonCONDS
import com.twittelonr.logging.Loggelonr
import com.twittelonr.reloncos.uselonr_twelonelont_graph.relonlatelondTwelonelontHandlelonrs.TwelonelontBaselondRelonlatelondTwelonelontsHandlelonr
import com.twittelonr.reloncos.uselonr_twelonelont_graph.relonlatelondTwelonelontHandlelonrs.ProducelonrBaselondRelonlatelondTwelonelontsHandlelonr
import com.twittelonr.reloncos.uselonr_twelonelont_graph.relonlatelondTwelonelontHandlelonrs.ConsumelonrsBaselondRelonlatelondTwelonelontsHandlelonr
import com.twittelonr.simclustelonrs_v2.common.TwelonelontId
import com.twittelonr.simclustelonrs_v2.common.UselonrId

objelonct UselonrTwelonelontGraph {
  delonf tracelonId: TracelonId = Tracelon.id
  delonf clielonntId: Option[ClielonntId] = ClielonntId.currelonnt
}

class UselonrTwelonelontGraph(
  twelonelontBaselondRelonlatelondTwelonelontsHandlelonr: TwelonelontBaselondRelonlatelondTwelonelontsHandlelonr,
  producelonrBaselondRelonlatelondTwelonelontsHandlelonr: ProducelonrBaselondRelonlatelondTwelonelontsHandlelonr,
  consumelonrsBaselondRelonlatelondTwelonelontsHandlelonr: ConsumelonrsBaselondRelonlatelondTwelonelontsHandlelonr,
  elonndpointLoadShelonddelonr: elonndpointLoadShelonddelonr
)(
  implicit timelonr: Timelonr)
    elonxtelonnds thriftscala.UselonrTwelonelontGraph.MelonthodPelonrelonndpoint {

  privatelon val delonfaultTimelonout: Duration = Duration(50, MILLISelonCONDS)
  privatelon val elonmptyRelonsponselon = Futurelon.valuelon(RelonlatelondTwelonelontRelonsponselon())
  privatelon val elonmptyFelonaturelonRelonsponselon = Futurelon.valuelon(UselonrTwelonelontFelonaturelonRelonsponselon())

  privatelon val log = Loggelonr()

  ovelonrridelon delonf reloncommelonndTwelonelonts(relonquelonst: ReloncommelonndTwelonelontRelonquelonst): Futurelon[ReloncommelonndTwelonelontRelonsponselon] =
    Futurelon.valuelon(ReloncommelonndTwelonelontRelonsponselon())

  ovelonrridelon delonf gelontLelonftNodelonelondgelons(relonquelonst: GelontReloncelonntelondgelonsRelonquelonst): Futurelon[GelontReloncelonntelondgelonsRelonsponselon] =
    Futurelon.valuelon(GelontReloncelonntelondgelonsRelonsponselon())

  ovelonrridelon delonf gelontRightNodelon(twelonelont: Long): Futurelon[NodelonInfo] = Futurelon.valuelon(NodelonInfo())

  // delonpreloncatelond
  ovelonrridelon delonf relonlatelondTwelonelonts(relonquelonst: RelonlatelondTwelonelontRelonquelonst): Futurelon[RelonlatelondTwelonelontRelonsponselon] =
    elonmptyRelonsponselon

  ovelonrridelon delonf twelonelontBaselondRelonlatelondTwelonelonts(
    relonquelonst: TwelonelontBaselondRelonlatelondTwelonelontRelonquelonst
  ): Futurelon[RelonlatelondTwelonelontRelonsponselon] =
    elonndpointLoadShelonddelonr("twelonelontBaselondRelonlatelondTwelonelonts") {
      twelonelontBaselondRelonlatelondTwelonelontsHandlelonr(relonquelonst).raiselonWithin(delonfaultTimelonout)
    }.relonscuelon {
      caselon elonndpointLoadShelonddelonr.LoadShelonddingelonxcelonption =>
        elonmptyRelonsponselon
      caselon elon =>
        log.info("uselonr-twelonelont-graph_twelonelontBaselondRelonlatelondTwelonelonts" + elon)
        elonmptyRelonsponselon
    }

  ovelonrridelon delonf producelonrBaselondRelonlatelondTwelonelonts(
    relonquelonst: ProducelonrBaselondRelonlatelondTwelonelontRelonquelonst
  ): Futurelon[RelonlatelondTwelonelontRelonsponselon] =
    elonndpointLoadShelonddelonr("producelonrBaselondRelonlatelondTwelonelonts") {
      producelonrBaselondRelonlatelondTwelonelontsHandlelonr(relonquelonst).raiselonWithin(delonfaultTimelonout)
    }.relonscuelon {
      caselon elonndpointLoadShelonddelonr.LoadShelonddingelonxcelonption =>
        elonmptyRelonsponselon
      caselon elon =>
        log.info("uselonr-twelonelont-graph_producelonrBaselondRelonlatelondTwelonelonts" + elon)
        elonmptyRelonsponselon
    }

  ovelonrridelon delonf consumelonrsBaselondRelonlatelondTwelonelonts(
    relonquelonst: ConsumelonrsBaselondRelonlatelondTwelonelontRelonquelonst
  ): Futurelon[RelonlatelondTwelonelontRelonsponselon] =
    elonndpointLoadShelonddelonr("consumelonrsBaselondRelonlatelondTwelonelonts") {
      consumelonrsBaselondRelonlatelondTwelonelontsHandlelonr(relonquelonst).raiselonWithin(delonfaultTimelonout)
    }.relonscuelon {
      caselon elonndpointLoadShelonddelonr.LoadShelonddingelonxcelonption =>
        elonmptyRelonsponselon
      caselon elon =>
        log.info("uselonr-twelonelont-graph_consumelonrsBaselondRelonlatelondTwelonelonts" + elon)
        elonmptyRelonsponselon
    }

  // delonpreloncatelond
  ovelonrridelon delonf uselonrTwelonelontFelonaturelons(
    uselonrId: UselonrId,
    twelonelontId: TwelonelontId
  ): Futurelon[UselonrTwelonelontFelonaturelonRelonsponselon] =
    elonmptyFelonaturelonRelonsponselon

}
